Fixup responsiveness in titles/bars, hide ioos top banner on mobile

--- a/css/atn.scss
+++ b/css/atn.scss
@@ -58,7 +58,6 @@
 }
 
 .atn-title {
-  font-size: 2em;
 }
 
 html,body {
